hike-and-fly/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hikeandfly-service
spec:
  selector:
    app: hikeandfly
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
