hike-and-fly/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hikeandfly-ingress
  namespace: hike-and-fly
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
      - hikeandfly.apps.klopfi.net
    secretName: wildcard-klopfi-net
  rules:
  - host: hikeandfly.apps.klopfi.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hikeandfly-service
            port:
              number: 8080
